# hack-the-future-api

./: .flake8  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  sample.env
alembic/: env.py  script.py.mako
alembic/versions/: 0b223aad73a2_initial.py  52ddce62e7bf_initial_commit.py  9cec9e8f03c0_add_enums_for_oil_and_roadtrip.py  ec8e461cdd82_add_location_field.py
apidoc/: Hack The Future.postman_collection.json
app/: admin.py  api_router.py  create_app.py  models.py
app/core/: config.py
app/core/settings/: app_settings.py  base_settings.py  loggin_config.py  (+2 more)
app/definitions/: __init__.py  general.py
app/infrastructure/: db.py
app/models/: __init__.py  base.py  energy.py  fuel.py  oil.py  roadtrip.py
app/repositories/: __init__.py  energy_repo.py  fuel_repo.py  oil_repo.py  roadtrip_repo.py
app/routes/: __init__.py  energy_routes.py  fuel_routes.py  oil_routes.py  report_routes.py  roadtrip_routes.py
app/schemas/: __init__.py  energy_schema.py  fuel_schema.py  oil_schema.py  roadtrip_schema.py
app/services/: __init__.py  energy.py  fuel.py  oil.py  report.py  roadtrip.py
app/students/: admin_views.py  utils.py
app/utils/: entities_utils.py  errors.py
tests/: conftest.py  test_energy_consumo_promedio.py  test_energy_create.py  test_energy_get_all copy.py  test_fuel_create.py  test_fuel_get_all.py  test_fuel_reports.py  test_oil_consumo_mensual_aceite.py  test_oil_create.py  test_oil_get_all.py  test_reports.py  test_roadtrip_comparativa_mensual.py  test_roadtrip_create.py  test_roadtrip_get_all.py
(+9 files in other folders)
